--- a/centre-service.yml
+++ b/centre-service.yml
@@ -7,7 +7,19 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create # You can use 'validate', 'update', 'create', or 'create-drop'
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:create} # You can use 'validate', 'update', 'create', or 'create-drop'
     show-sql: true
+  boot:
+    admin:
+      client:
+        url: http://localhost:8080 # URL of the Admin Server
+  eureka:
+    client:
+      service-url:
+        defaultZone: ${DISCOVER-SERVER-URL:http://localhost:8761/eureka/}
+    instance:
+      prefer-ip-address: true
+  config:
+    import: "optional:configserver:http://localhost:8888"
 server:
   port: 8085
