--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,8 @@ spring:
     admin:
       client:
         url: http://localhost:8080/applications
-
+  kafka:
+    bootstrap-servers: localhost:9092
 eureka:
   client:
     service-url:
