--- a/centre-service.yml
+++ b/centre-service.yml
@@ -1,25 +1,26 @@
-spring:
-  datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/centredb}
-    username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:lamaachi}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:create} # You can use 'validate', 'update', 'create', or 'create-drop'
-    show-sql: true
-  boot:
-    admin:
-      client:
-        url: http://localhost:8080 # URL of the Admin Server
-  eureka:
-    client:
-      service-url:
-        defaultZone: ${DISCOVER-SERVER-URL:http://localhost:8761/eureka/}
-    instance:
-      prefer-ip-address: true
-  config:
-    import: "optional:configserver:http://localhost:8888"
+#spring:
+#  datasource:
+#    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/centredb}
+#    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+#    password: ${SPRING_DATASOURCE_PASSWORD:lamaachi}
+#    driver-class-name: org.postgresql.Driver
+#  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate:
+#      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:create} # You can use 'validate', 'update', 'create', or 'create-drop'
+#    show-sql: true
+#  boot:
+#    admin:
+#      client:
+#        url: http://localhost:8080 # URL of the Admin Server
+#  eureka:
+#    client:
+#      service-url:
+#        defaultZone: ${DISCOVER-SERVER-URL:http://localhost:8761/eureka/}
+#    instance:
+#      prefer-ip-address: true
+#  config:
+#    import: "optional:configserver:http://localhost:8888"
+
 server:
-  port: 8085
+  port: 1000
